@@ -224,7 +224,16 @@ public class Interface extends GenericObject
 		return "Interface";
 	}
 
-	/**
+	/* (non-Javadoc)
+    * @see org.netxms.client.objects.AbstractObject#isAllowedOnMap()
+    */
+   @Override
+   public boolean isAllowedOnMap()
+   {
+      return true;
+   }
+
+   /**
 	 * @return the slot
 	 */
 	public int getSlot()
