@@ -192,6 +192,9 @@
                  <instanceof
                        value="org.netxms.client.objects.ServiceContainer">
                  </instanceof>
+                 <instanceof
+                       value="org.netxms.client.objects.AccessPoint">
+                 </instanceof>
               </or>
            </enabledWhen>
         </page>
