@@ -2,14 +2,14 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Network Maps Plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.networkmaps;singleton:=true
-Bundle-Version: 2.0.3
+Bundle-Version: 2.0.4
 Bundle-Activator: org.netxms.ui.eclipse.networkmaps.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.rap.ui;bundle-version="2.3.1",
  org.eclipse.core.runtime;bundle-version="3.8.0",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.3",
- org.netxms.webui.core;bundle-version="2.0.1",
- org.netxms.ui.eclipse.objectbrowser;bundle-version="2.0.0",
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.4",
+ org.netxms.webui.core;bundle-version="2.0.4",
+ org.netxms.ui.eclipse.objectbrowser;bundle-version="2.0.3",
  org.netxms.ui.eclipse.imagelibrary;bundle-version="2.0.0",
  org.netxms.ui.eclipse.osm;bundle-version="2.0.0",
  org.netxms.gef4.zest.layouts;bundle-version="2.0.2",
@@ -17,9 +17,9 @@ Require-Bundle: org.eclipse.rap.ui;bundle-version="2.3.1",
  org.netxms.gef4.zest.jface;bundle-version="2.0.2",
  org.netxms.rap.draw2d;bundle-version="1.5.1",
  org.netxms.ui.eclipse.charts;bundle-version="2.0.0",
- org.netxms.ui.eclipse.nxsl;bundle-version="2.0.0",
- org.netxms.ui.eclipse.objectview;bundle-version="2.0.0",
- org.netxms.ui.eclipse.datacollection;bundle-version="2.0.0"
+ org.netxms.ui.eclipse.nxsl;bundle-version="2.0.4",
+ org.netxms.ui.eclipse.objectview;bundle-version="2.0.3",
+ org.netxms.ui.eclipse.datacollection;bundle-version="2.0.4"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
 Export-Package: org.netxms.ui.eclipse.networkmaps.algorithms,
