@@ -2,18 +2,18 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Basic Object Management Plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.objectmanager;singleton:=true
-Bundle-Version: 2.0.3
+Bundle-Version: 2.0.4
 Bundle-Activator: org.netxms.ui.eclipse.objectmanager.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.rap.ui;bundle-version="2.3.0",
  org.eclipse.rap.ui.forms;bundle-version="2.3.1",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.3",
- org.netxms.webui.core;bundle-version="2.0.1",
- org.netxms.ui.eclipse.objectbrowser;bundle-version="2.0.0",
- org.netxms.ui.eclipse.usermanager;bundle-version="2.0.0",
- org.netxms.ui.eclipse.nxsl;bundle-version="2.0.0",
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.4",
+ org.netxms.webui.core;bundle-version="2.0.4",
+ org.netxms.ui.eclipse.objectbrowser;bundle-version="2.0.3",
+ org.netxms.ui.eclipse.usermanager;bundle-version="2.0.4",
+ org.netxms.ui.eclipse.nxsl;bundle-version="2.0.4",
  org.netxms.ui.eclipse.imagelibrary;bundle-version="2.0.0",
- org.netxms.ui.eclipse.datacollection;bundle-version="2.0.0",
+ org.netxms.ui.eclipse.datacollection;bundle-version="2.0.4",
  org.netxms.ui.eclipse.eventmanager;bundle-version="2.0.0"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
