@@ -15,6 +15,7 @@
 - Network device driver can be manually selected for node by setting snmp.driver custom attribute
 - Added default melodies for alarms
 - Added option to play sound on alarm sound preference page
+- Interface objects can be used on network maps
 - Android Agent:
 	- Added support for Lollipop MR1 (v5.1)
 	- Updated support library
@@ -22,7 +23,7 @@
 	- Changed order of overview items to match Java console (node browser)
 	- Added MTU field in interface details (node browser)
 	- Updated support library
-- Fixed issues: #655, #657, #696, #701, #724, #804, #805, #811, #812, #813
+- Fixed issues: #655, #657, #696, #701, #724, #800, #804, #805, #811, #812, #813
 
 
 *
